# presage

./: .gitignore  ChangeLog  Makefile.am  README.md  configure.ac  rpm
apps/notepad++/: Makefile.am  README
apps/notepad++/src/: NppPresage.cpp  PluginDefinition.cpp  PluginDefinition.h  PresageUplink.cpp
apps/notepad++/src/DockingFeature/: goLine.aps
apps/notepad++/vs.proj/: NppPresage.sln  NppPresage.vcxproj
apps/qt/qprompter/: qprompter.pro
bindings/c/: libpresage-1.def  presage_c_demo.c
bindings/csharp/: deploy.cmd
bindings/csharp/presage.net/: IPresage.cs  Presage.cs
bindings/csharp/presage_csharp_demo/: presage_csharp_demo.cs
bindings/csharp/presage_wcf_service/: IPresageService.cs  PresageService.cs
bindings/csharp/presage_wcf_service_system_tray/: AboutForm.Designer.cs  AboutForm.cs
bindings/python/: Makefile.am
doc/: Doxyfile.in  INSTALL_MSYS2_dev_env.txt  Makefile.am  getting_started.txt
packaging/sailfish/: database_empty.db  package-language.sh  presage-lang-XX.spec  presage.spec  presage.xml
packaging/sailfish-language/: hunspell-lang-XX.spec  package-hunspell.sh  package-language.sh
packaging/sailfish-language/obs/: presage-lang-XX.spec
packaging/sailfish/obs/: build.script
packaging/windows/: presage_installer.nsi  win-buildpackage.sh
resources/profiles/: presage.xml.template
src/lib/: Makefile.am  libpresage.map  presage.cpp  presage.h  presage.pc.in
src/lib/core/: Makefile.am  charsets.h  defaultProfile.cpp  predictorRegistry.cpp  profile.cpp  profile.h  profileManager.cpp  utility.cpp
src/lib/core/context_tracker/: contextTracker.cpp  contextTracker.h
src/lib/predictors/: ARPAPredictor.cpp  ARPAPredictor.h  Makefile.am  abbreviationExpansionPredictor.cpp  abbreviationExpansionPredictor.h  dejavuPredictor.cpp  dejavuPredictor.h  dictionaryPredictor.cpp  dictionaryPredictor.h  dummyPredictor.cpp  dummyPredictor.h  hunspellPredictor.cpp  hunspellPredictor.h  predictor.h  recencyPredictor.cpp  recencyPredictor.h  smoothedNgramPredictor.cpp  smoothedNgramPredictor.h  smoothedNgramTriePredictor.cpp  smoothedNgramTriePredictor.h
src/lib/predictors/dbconnector/: Makefile.am  databaseConnector.cpp  databaseConnector.h  trieDatabaseConnector.cpp  trieDatabaseConnector.h
src/tools/: Makefile.am  presageDemo.cpp  presageDemoForget.cpp  text2ngram.cpp
test/lib/core/: Makefile.am  profileTest.xml
test/lib/core/context_tracker/: Makefile.am  contextChangeDetectorTest.cpp
test/lib/predictors/: newSmoothedNgramPredictorTest.cpp  predictorsTestMockObjects.cpp  smoothedNgramPredictorTest.cpp  smoothedNgramPredictorTest.h
utils/: charmap.py  cleaner.py  ngramtxt2marisa.py  process_de.py  process_en.py  process_es.py  process_et.py  process_ru.py  progress_bar.py  sqlite2marisa.py  treebank_nocont.py
(+3 files in other folders)
