
###########
#  Presage, an extensible predictive text entry system
#  ------------------------------------------------------
#
#  Copyright (C) 2012  Matteo Vescovi <matteo.vescovi@yahoo.co.uk>
#
#  This program is free software; you can redistribute it and/or modify
#  it under the terms of the GNU General Public License as published by
#  the Free Software Foundation; either version 2 of the License, or
#  (at your option) any later version.
#
#  This program is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#
#  You should have received a copy of the GNU General Public License along
#  with this program; if not, write to the Free Software Foundation, Inc.,
#  51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.

## Process this file with automake to produce Makefile.in

EXTRA_DIST = \
	README \
	src/menuCmdID.h \
	src/no_ms_shit.props \
	src/no_ms_shit.vsprops \
	src/Notepad_plus_msgs.h \
	src/NppPresage.cpp \
	src/NppPresage.sln \
	src/NppPresage_vc8.sln \
	src/NppPresage.vcxproj \
	src/NppPresage.vcxproj.filters \
	src/NppPresage.vcxproj.user \
	src/PluginDefinition.cpp \
	src/PluginDefinition.h \
	src/PluginInterface.h \
	src/PresageUplink.cpp \
	src/PresageUplink.h \
	src/Scintilla.h 
